--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ plugins:
 
 author:
   name   : "Mangesh Mokashi"
-  avatar : "/assets/images/bio-photo.jpg"
+  avatar : "/assets/images/port.jpg"
   bio    : "Technical Content Writer"
   links:
     - label: "Website"
